fixed bootstrapping method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(nocovariates.estimate_var_effectsize)
 export(nocovariates.treat)
 export(nocovariates.true_effect_size)
 export(treatment_summary)
+importFrom(pbmcapply,pbmclapply)
 importFrom(stats,rbinom)
 importFrom(stats,var)
 importFrom(utils,combn)
