--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ License: GPL-3
 Imports:
     mvtnorm,
     stats,
-    pbmcapply
+    pbmcapply,
+    dplyr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
